Remove obsolete Java 8 build profile and fix README.md (#84)
*Issue #, if available:*
N/A

*Description of changes:*
- Removed the `java-8-compatible` Maven profile (obsolete since project
targets Java 17)
- Replaced deprecated
`javax.xml.bind.DatatypeConverter.printBase64Binary()` with
`java.util.Base64` in `AggregatorUtil.java`
- Replaced obsolete `cobertura-maven-plugin` (Java 8 only, abandoned
since 2015) with `jacoco-maven-plugin:0.8.14` in reporting section
- Updated README to remove broken public S3 jar download instructions

*Build and Testing*
`mvn clean install`: was a success

```
Run completed in 1 minute, 22 seconds.
Total number of tests run: 94
Suites: completed 39, aborted 0
Tests: succeeded 94, failed 0, canceled 0, ignored 0, pending 0
All tests passed.

[INFO] ------------------------------------------------------------------------
[INFO] BUILD SUCCESS
[INFO] ------------------------------------------------------------------------
[INFO] Total time:  38.904 s
[INFO] Finished at: 2026-05-08T12:28:28-07:00
[INFO] ------------------------------------------------------------------------
```

*Jacoco Plugin testing*
Made sure the Jacoco plugin works locally by running - `mvn
org.jacoco:jacoco-maven-plugin:0.8.14:prepare-agent test
org.jacoco:jacoco-maven-plugin:0.8.14:report`

This generated the below website:

<img width="1265" height="365" alt="Image"
src="https://github.com/user-attachments/assets/8127841e-05d9-41b9-81e8-1fb5c540eedf"
/>


<br>

Co-authored-by: Shrirang Mhalgi <srmhalgi@amazon.com>

By submitting this pull request, I confirm that you can use, modify,
copy, and redistribute this contribution, under the terms of your
choice.

---------

Co-authored-by: shrirangmhalgi <shrirangmhalgi@users.noreply.github.com>